styling for desktop for components - TopProducts, Blog and Navbar components and finish additional styling for desktop.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
+    "react-horizontal-slider": "^1.1.1",
     "react-scripts": "4.0.3",
+    "react-star-ratings": "^2.3.0",
     "styled-components": "^5.2.1",
     "web-vitals": "^1.1.1"
   },
